--- a/server/device/connected.html
+++ b/server/device/connected.html
@@ -27,8 +27,8 @@
 <div class="center">
     <h1 class="dick-name">Johnson</h1>
 
-    <div class="penis"></div>
-    <div class="nigga-penis penis"></div>
+    <div id="white-penis" class="penis"></div>
+    <div id="black-penis" class="nigga-penis penis"></div>
     <div class="druppels toptobottom"></div>
     <!--<img class="druppels" src="../assets/img/druppels.svg" onerror="this.onerror=null; class="druppels"/>-->
 </div>
@@ -77,6 +77,13 @@
         $("#plas").attr("src", sourceURL + userSound + ".mp3");
         plas.pause();
         plas.load();//suspends and restores all audio element
+
+        if (decodeURIComponent(userName) == "black python") {
+            $("#black-penis").show();
+
+        } else {
+            $("#white-penis").show();
+        }
 
         var socket = io.connect(currentURl());
         $('body').css('background-color', '#' + userColor);
@@ -165,11 +172,11 @@
         console.log("Starting Tracking");
     });
 
-    function playSounds(sound){
+    function playSounds(sound) {
 //        console.log(sound);
         sound.pause();
 
-        sound.addEventListener('ended', function() {
+        sound.addEventListener('ended', function () {
             this.currentTime = 0;
             this.play();
         }, false);
@@ -177,7 +184,7 @@
         sound.play();
     }
 
-    function endSounds(sound){
+    function endSounds(sound) {
         sound.pause();
         sound.currentTime = 0;
     }
