--- a/server/device/connected.html
+++ b/server/device/connected.html
@@ -28,7 +28,7 @@
     <h1 class="dick-name">Johnson</h1>
 
     <div id="white-penis" class="penis"></div>
-    <div id="black-penis" class="nigga-penis penis"></div>
+    <div id="black-penis topTobottom" class="nigga-penis penis"></div>
     <div class="druppels toptobottom"></div>
     <!--<img class="druppels" src="../assets/img/druppels.svg" onerror="this.onerror=null; class="druppels"/>-->
 </div>
@@ -78,7 +78,7 @@
         plas.pause();
         plas.load();//suspends and restores all audio element
 
-        if (decodeURIComponent(userName) == "black python") {
+        if (decodeURIComponent(userName) === "black python") {
             $("#black-penis").show();
 
         } else {
