--- a/game/index.html
+++ b/game/index.html
@@ -51,7 +51,7 @@
                     for (var player in o) {
 //                        console.log("player " + player);
                         var currentplayer = o[player].player;
-                        players.push('<li><div class="circle" style="background-color: #' + currentplayer.color + '"><img src="img/penis.svg" alt=""/></div><h2>' + currentplayer.uid + '</h2></li>');
+                        players.push('<li><div class="circle" style="background-color: #' + currentplayer.color + '"><img src="img/penis.svg" alt=""/></div><h2>' + decodeURIComponent(currentplayer.uid) + '</h2></li>');
                     }
                     $avatars.html(players);
                 } else {
